maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: ':' expected but ',' found.
def marquerSol(casee, numero) : Any = {
                    ^ShortestPathMaze:46: error: identifier expected but '}' found.
}
^